--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,18 @@
 openai-clip
-huggingface-hub==0.25.1
-matplotlib==3.7.5
-open_clip_torch==2.29.0
-pandas==2.0.3
-peft==0.13.0
-pillow==10.4.0
-pycocoevalcap==1.2
-pycocotools==2.0.7
-tokenizers==0.20.0
-torch==2.4.1
-torchvision==0.19.1
-tqdm==4.66.5
-setuptools~=75.1.0
-safetensors~=0.4.5
-datasets~=3.0.1
+huggingface-hub
+matplotlib
+open_clip_torch
+peft
+pillow
+torch
+torchvision
+tqdm
+setuptools
+safetensors
+datasets
 openpyxl
 datasets
 numpy
 transformers
-## capivara only requirements
-omegaconf
-pytorch_lightning
+pandas
+tokenizers
