--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,4 @@ src/eval/rrg_eval/__pycache__/*
 src/eval/__pycache__/*
 src/data/__pycache__/*
 src/__pycache__/*
-*/*/__pycache__/*
-*/__pycache__/*
+src/train/__pycache__/*
