--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ temp.json
 output.txt
 earlyStopping.py
 .idea/*
-__pycache__/*
+__pycache__/
 plotResults.py
 embeddings/*
 descricoes.xlsx
@@ -31,9 +31,9 @@ CLIP-LoRA
 Llip
 hardcodedEval.py
 mimic-code
-src/models/__pycache__/*
-src/eval/rrg_eval/__pycache__/*
-src/eval/__pycache__/*
-src/data/__pycache__/*
-src/__pycache__/*
-src/train/__pycache__/*
+src/models/__pycache__/
+src/eval/rrg_eval/__pycache__/
+src/eval/__pycache__/
+src/data/__pycache__/
+src/__pycache__/
+src/train/__pycache__/
